--- a/imBlur/Makefile
+++ b/imBlur/Makefile
@@ -5,8 +5,8 @@ NVCC=nvcc
 # locations on most linux distros #
 ###################################
 
-OPENCV_LIBPATH=/usr/lib
-OPENCV_INCLUDEPATH=/usr/include
+OPENCV_LIBPATH=/usr/local/pkg/opencv/2.4.8/lib
+OPENCV_INCLUDEPATH=/usr/local/pkg/opencv/2.4.8/include
 
 ###################################################
 # On Macs the default install locations are below #
@@ -16,8 +16,8 @@ OPENCV_INCLUDEPATH=/usr/include
 #OPENCV_INCLUDEPATH=/usr/local/include
 
 OPENCV_LIBS=-lopencv_core -lopencv_imgproc -lopencv_highgui
-CUDA_INCLUDEPATH=/usr/local/cuda-5.0/include
-
+CUDA_INCLUDEPATH=/usr/local/cuda/cuda/include
+CUDA_LIBPATH=/usr/local/pkg/cuda/6.5/lib64
 ######################################################
 # On Macs the default install locations are below    #
 # ####################################################
@@ -26,8 +26,9 @@ CUDA_INCLUDEPATH=/usr/local/cuda-5.0/include
 #CUDA_LIBPATH=/usr/local/cuda/lib
 
 NVCC_OPTS=-O3 -arch=sm_20 -Xcompiler -Wall -Xcompiler -Wextra -m64
-
 GCC_OPTS=-O3 -Wall -Wextra -m64
+NVCC_OPTS=
+GCC_OPTS=
 
 student: main.o student_func.o compare.o reference_calc.o Makefile
 	$(NVCC) -o HW2 main.o student_func.o compare.o reference_calc.o -L $(OPENCV_LIBPATH) $(OPENCV_LIBS) $(NVCC_OPTS)
